tests/paczka1/fuzzy1/96675472.err
Error in line 13: A713 S767 58,85
Error in line 17: ySqRpDV S767 84,8
Error in line 32: qXVbsd A128 90,8
Error in line 35: i1Hd2GcC#tS S533 75,7
